[project]
name = "principles_of_autonomy"
version = "0.1.0"
description = "A package for tooling related to 16.410 Principles of Autonomy at MIT"
authors = [
    {name = "Ethan Fahnestock", email = "ekf@mit.edu"},
]
dependencies = [
    "gradescope-utils>=0.5.0",
    "timeout-decorator>=0.5.0",
    "numpy>=2.1.0",
    "nbformat>=5.10.4",
    "shapely==2.0.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
